--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Growy <em>by HTML5 UP</em></a></h1>
+						<h1><a href="index.html" id="logo">Growy <h2>A gigantic heading you can use for whatever</h2> by HTML5 UP</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
